# agentic-trading-bot

./: .env.example  .gitignore  AUTH_FIX_SUMMARY.md  PACKAGING.md  README.md  demo.py  kite.py  openrouter_bridge.py  package.json  pyproject.toml  start-backend.ps1  start-frontend.ps1  test_auth_persistence.py  test_bridge.py  test_connection.py  zerodha_mcp_client.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  run_server.py  trading-backend.spec
backend/src/: main.py  runtime_config.py  settings.py
backend/src/graph/: state.py  trading_graph.py
backend/src/mcp/: zerodha_client.py
backend/src/tools/: fundamental_tools.py  market_tools.py  news_tools.py  portfolio_tools.py  risk_tools.py  ta_tools.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: handler.ts  route.ts
frontend/src/app/api/copilotkit/[...path]/: route.ts
frontend/src/components/: BackendSettings.tsx  ModelSettings.tsx
frontend/src/lib/: a2ui-catalog.tsx  config.ts  providers.tsx
scripts/: build-sidecar.ps1
src/: agent.py  client.py  example_ta_usage.py  kite.py  main.py  mcp_client.py  openrouter_bridge.py  tools.py
