[project]
name = "agentic-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "fastmcp>=2.12.3",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "litellm",
    "mcp[cli]>=1.13.1",
    "pandas>=2.3.2",
    "pandas-ta>=0.4.71",
    "uvicorn[standard]>=0.35.0",
]
