[package]
name = "trading-bot"
version = "0.2.0"
description = "Agentic Trading Bot"
edition = "2021"
rust-version = "1.77.2"

[lib]
# `cdylib` is required for the mobile (Android/iOS) targets.
name = "trading_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
